--- a/app/escriptorium/static/css/rtl.css
+++ b/app/escriptorium/static/css/rtl.css
@@ -24,13 +24,11 @@
 .rtl #diplomatic-lines div {
     /* fixes table like alignment */
     text-align: right;
-    margin-right: 50px;
-    margin-left: .5em;
 }
 
 .rtl #diplomatic-lines div:before {
-    margin-right: -50px;
     margin-left: .5em;
+    margin-right: 0;
     border-left: 1px solid #ddd;
     border-right: none;
 }
